--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,8 +10,10 @@
   },
   "include": [
     "**/*.ts",
+    "**/*.js",
     "**/*.tsx",
+    "**/*.jsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
-  ]
+, "app/(tabs)/index.jsx"  ]
 }
