--- a/app.json
+++ b/app.json
@@ -11,27 +11,35 @@
     "ios": {
       "supportsTablet": true
     },
+      
     "android": {
-      "adaptiveIcon": {
-        "backgroundColor": "#E6F4FE",
-        "foregroundImage": "./assets/images/android-icon-foreground.png",
-        "backgroundImage": "./assets/images/android-icon-background.png",
-        "monochromeImage": "./assets/images/android-icon-monochrome.png"
-      },
-      "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false,
-      "package": "com.suleimanyusufkaita.baballekatsina"
-    },
+  "package": "com.suleimanyusufkaita.baballekatsina",
+  "versionCode": 1,
+  "compileSdkVersion": 36,
+  "targetSdkVersion": 36,
+  "sdkVersion": "54.0.0",
+  "adaptiveIcon": {
+    "backgroundColor": "#E6F4FE",
+    "foregroundImage": "./assets/images/logo.jpg",
+    "backgroundImage": "./assets/images/logo.jpg",
+    "monochromeImage": "./assets/images/logo.jpg"
+  },
+  "edgeToEdgeEnabled": true,
+  "predictiveBackGestureEnabled": false,
+    "hermesEnabled": true
+}
+,
     "web": {
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
+        
       "expo-router",
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/splash-icon.png",
+          "image": "./assets/images/logo.jpg",
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff",
