--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/datetimepicker": "^8.4.5",
-    "@react-native-community/slider": "^5.0.1",
+    "@react-native-community/slider": "^5.1.0",
     "@react-native-picker/picker": "^2.11.3",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "@reduxjs/toolkit": "^2.9.0",
     "d3-shape": "^3.2.0",
-    "expo": "~54.0.13",
+    "expo": "^54.0.20",
+    "expo-build-properties": "^1.0.9",
     "expo-constants": "~18.0.9",
     "expo-dev-client": "~6.0.15",
     "expo-device": "^8.0.9",
@@ -32,9 +33,11 @@
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
     "expo-local-authentication": "^17.0.7",
-    "expo-notifications": "^0.32.12",
+    "expo-modules-autolinking": "^3.0.19",
+    "expo-modules-core": "^3.0.22",
+    "expo-notifications": "~0.32.12",
     "expo-router": "~6.0.11",
-    "expo-splash-screen": "~31.0.10",
+    "expo-splash-screen": "^31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
@@ -46,6 +49,7 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-color-picker": "^0.6.0",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-gradle-plugin": "^0.71.19",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
@@ -54,12 +58,15 @@
     "react-native-web": "~0.21.0",
     "react-native-wheel-color-picker": "^1.3.1",
     "react-native-worklets": "0.5.1",
+    "react-native-worklets-core": "^1.6.2",
     "react-redux": "^9.2.0",
+    "rebuild": "^0.1.2",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@react-native-community/cli": "^20.0.2",
-    "@types/react": "~19.1.0",
+    "@types/react": "~19.1.10",
+    "@types/react-native": "^0.72.8",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
     "typescript": "~5.9.2"
